--- a/index.html
+++ b/index.html
@@ -1,11 +1,118 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="assets/profile%20(3).png" rel="icon">
+    <link href="styles.css" rel="stylesheet">
+    <link href="normalize.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <title>Resume</title>
 </head>
 <body>
-gitgfsdfsd
-<p>fhhdhgjsdhgshhshg</p>
+<main class="container">
+    <div class="profile">
+        <img src="assets/photo.jpg" alt="girl"/>
+        <section>
+            <h1 class="name">Anastasiia Vatrala</h1>
+            <p class="position">Front-End Developer</p>
+            <a class="link" target="_blank"
+               href="https://www.google.com.ua/maps/place/%D0%9E%D0%B4%D0%B5%D1%81%
+               D1%81%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE
+               %D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+65000/@46.460123,30.5717039,11
+               z/data=!3m1!4b1!4m6!3m5!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!8m2!
+               3d46.482526!4d30.7233095!16zL20vMGZmbXA?hl=ru&coh=164777&entry=tt">
+                <span class="material-symbols-outlined">location_on</span>
+                Odesa, Ukraine
+            </a>
+        </section>
+    </div>
+    <div class="content">
+        <div class="leftContent">
+            <section class="contacts border section">
+                <h2 class="primaryTitle">Contacts</h2>
+                <a class="link" target="_blank" href="tel:+380961311521">
+                    <img src="assets/call.svg" alt="icon"/>
+                    +380961311521</a>
+                <a class="link" target="_blank" href="mailto:vatralanaska@gmail.com">
+                    <img src="assets/mail.svg" alt="icon"/>
+                    vatralanaska@gmail.com</a>
+                <a class="link" target="_blank" href="https://github.com/Vatrushka20">
+                    <img src="assets/github.svg" alt="icon"/>
+                    github.com</a>
+                <a class="link" target="_blank" href="https://www.linkedin.com/in/anastasiya-vatrala-990ab4248/">
+                    <img src="assets/linkedin.svg" alt="icon"/>
+                    linkedin.com</a>
+            </section>
+
+            <section class="skills border section">
+                <h2 class="primaryTitle">Skills</h2>
+                <p>HTML5</p>
+                <p>CSS</p>
+                <p>Git</p>
+            </section>
+
+            <section class="education border section">
+                <h2 class="primaryTitle">Education</h2>
+                <div class="types">
+                    <p>2014-2020</p>
+                    <h3 class="secondaryTitle">Odesa National Medical University</h3>
+                    <p>General medicine</p>
+                </div>
+                <div class="types">
+                    <p>2020-2022</p>
+                    <h3 class="secondaryTitle">Odesa Hospital №11</h3>
+                    <p>Otorhinolaryngology</p>
+                </div>
+                <div class="types">
+                    <p>02/2023-06/2023</p>
+                    <h3 class="secondaryTitle">Beetroot Academy</h3>
+                    <p>Front-End Developer</p>
+                </div>
+            </section>
+
+            <section class="languages border section">
+                <h2 class="primaryTitle">Languages</h2>
+                <div class="level">
+                    <h3 class="secondaryTitle">English</h3>
+                    <p>- A2+</p>
+                </div>
+            </section>
+
+        </div>
+
+        <div class="rightContent">
+            <section class=" aboutMe border section">
+                <h2 class="primaryTitle">About me</h2>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    <br/> elit. Adipiscing risus morbi lectus feugiat venenatis <br/>
+                    maecenas pretium. Magna leo diam sit commodo enim <br/> sed nulla.
+                    Amet faucibus eu pellentesque dui turpis <br/> nunc in. Suscipit
+                    pellentesque dignissim nullam <br/> adipiscing senectus sed.
+                </p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    <br/> elit. Adipiscing risus morbi lectus feugiat venenatis <br/>
+                    maecenas pretium. Magna leo diam sit commodo enim <br/> sed nulla.
+                    Amet faucibus eu pellentesque dui turpis <br/> nunc in. Suscipit
+                    pellentesque dignissim nullam <br/> adipiscing senectus sed.
+                </p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    <br/> elit. Adipiscing risus morbi lectus feugiat venenatis <br/>
+                    maecenas pretium. Magna leo diam sit commodo enim <br/> sed nulla.
+                    Amet faucibus eu pellentesque dui turpis <br/> nunc in. Suscipit
+                    pellentesque dignissim nullam <br/> adipiscing senectus sed.
+                </p>
+            </section>
+        </div>
+
+    </div>
+
+</main>
 </body>
 </html>
