--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
             <section class=" aboutMe border section">
                 <h2 class="primaryTitle">About me</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
-                    <br/> elit. Adipiscing risus morbi lectus feugiat venenatis <br/>
-                    maecenas pretium. Magna leo diam sit commodo enim <br/> sed nulla.
-                    Amet faucibus eu pellentesque dui turpis <br/> nunc in. Suscipit
-                    pellentesque dignissim nullam <br/> adipiscing senectus sed.
+                    elit. Adipiscing risus morbi lectus feugiat venenatis
+                    maecenas pretium. Magna leo diam sit commodo enim sed nulla.
+                    Amet faucibus eu pellentesque dui turpis nunc in. Suscipit
+                    pellentesque dignissim nullam adipiscing senectus sed.
                 </p>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
-                    <br/> elit. Adipiscing risus morbi lectus feugiat venenatis <br/>
-                    maecenas pretium. Magna leo diam sit commodo enim <br/> sed nulla.
-                    Amet faucibus eu pellentesque dui turpis <br/> nunc in. Suscipit
-                    pellentesque dignissim nullam <br/> adipiscing senectus sed.
+                    elit. Adipiscing risus morbi lectus feugiat venenatis
+                    maecenas pretium. Magna leo diam sit commodo enim sed nulla.
+                    Amet faucibus eu pellentesque dui turpis nunc in. Suscipit
+                    pellentesque dignissim nullam adipiscing senectus sed.
                 </p>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
-                    <br/> elit. Adipiscing risus morbi lectus feugiat venenatis <br/>
-                    maecenas pretium. Magna leo diam sit commodo enim <br/> sed nulla.
-                    Amet faucibus eu pellentesque dui turpis <br/> nunc in. Suscipit
-                    pellentesque dignissim nullam <br/> adipiscing senectus sed.
+                    elit. Adipiscing risus morbi lectus feugiat venenatis
+                    maecenas pretium. Magna leo diam sit commodo enim sed nulla.
+                    Amet faucibus eu pellentesque dui turpis nunc in. Suscipit
+                    pellentesque dignissim nullam adipiscing senectus sed.
                 </p>
             </section>
         </div>
