--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="description">Семантичні елементи HTML5 підтримуються у всіх сучасних браузерах.
             Крім того, ви можете "навчити" старих браузерів, як обробляти "невідомі елементи".
             Прочитайте про це
-            <a class="link" href="https://www.blogger.com/onboarding">
+            <a class="link" href="https://www.blogger.com/onboarding" target="_blank">
                 <span class="border">в підтримці браузера HTML5.</span></a>
         </p>
     </section>
