--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;700&display=swap" rel="stylesheet">
     <title>Homework</title>
 </head>
+
 <body>
 <header class="header container section">
     <h1 class="primaryTitle">HTML5 Семантичні елементи</h1>
@@ -47,12 +48,14 @@
         <h2 class="secondaryTitle">Нові семантичні елементи в HTML5</h2>
         <p class="description">HTML5 пропонує нові семантичні елементи для визначення різних частин
             веб-сторінки:</p>
+        <nav class="nav">
         <ul class="description paddingLi">
             <li><a href="#section">&lt;section&gt;</a></li>
             <li><a href="#article">&lt;article&gt;</a></li>
             <li><a href="#header">&lt;header&gt;</a></li>
             <li><a href="#footer">&lt;footer&gt;</a></li>
         </ul>
+        </nav>
     </section>
 
     <section id="section" class="elementSection">
