--- a/index.html
+++ b/index.html
@@ -5,9 +5,82 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="styles.css" rel="stylesheet">
+<!--            <link href="normalize.css" rel="stylesheet">-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+
+<div class="container">
+    <form class="form" action="#">
+        <div class="block">
+            <label for="name">Enter your name</label>
+            <input class="input" id="name" type="text" placeholder="Your name" required>
+        </div>
+
+        <div class="block">
+            <label for="email">Enter your email</label>
+            <input class="input" id="email" type="email" placeholder="Your email" required>
+        </div>
+
+        <div class="block">
+            <label for="password">Password</label>
+            <input class="input" id="password" type="password" minlength="8" placeholder="Create the password"
+                   required>
+        </div>
+        <div class="block">
+            <label for="password2">Repeat the password</label>
+            <input class="input" id="password2" type="password" minlength="8" placeholder="Repeat the password"
+                  required>
+        </div>
+
+        <div class="block">
+            <span class="sex">Gender</span>
+            <div class="gender">
+                <label for="woman">female
+                    <input class="radio " id="woman" type="radio" name="fav_language">
+                </label>
+                <label for="man">male
+                    <input class="radio " id="man" type="radio" name="fav_language">
+                </label>
+            </div>
+        </div>
+
+        <div class="block">
+            <label for="year">Enter your age </label>
+            <input class="input" id="year" type="number" min="0" max="99" required>
+        </div>
+
+        <div class="block">
+            <label for="course">Choose your course</label>
+            <select id="course" name="course" required>
+                <option value="Choose your course">-Choose your course-</option>
+                <option value="Front-End">Front-End</option>
+                <option value="Back-End">Back-End</option>
+                <option value="Design">Design</option>
+                <option value="QA">QA</option>
+            </select>
+        </div>
+
+        <div class="block">
+            <label for="address">Enter your address </label>
+            <textarea id="address" name="address" placeholder="Country, region, city, street"></textarea>
+        </div>
+
+        <label for="agree">
+            <input class="input" id="agree" type="checkbox">
+            I agree with the privacy policy</label>
+
+        <div class="block">
+            <button class="button reset" type="reset">Reset</button>
+            <button class="button submit" type="submit">Submit</button>
+        </div>
+    </form>
+
+</div>
 
 </body>
 </html>
