--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<header class="header">
+<header>
     <nav class="navigation">
         <ul class="navList">
             <li class="navItem">Home</li>
@@ -35,7 +35,7 @@
     <div class="aboutMe">
         <div class="container section">
             <h2 class="title">About me</h2>
-            <div class="block">
+            <div class="introduction">
                 <p class="description">Hi, I'm Denis – UX/UI designer from Minsk. <br>
                     I'm interested in design and everything connected with it.</p>
                 <p class="description">I'm studying at courses "Web and mobile design <br>
@@ -50,7 +50,7 @@
     <div class="skills container section">
         <h2 class="title">Skills</h2>
         <p class="description">I work in such programs as</p>
-        <div class="product">
+        <div class="editors">
             <section class="adobePhotoshop">
                 <img class="icon" src="assets/photoshop.svg" alt="icon">
                 <p class="secondaryDescription">Adobe <br> Photoshop</p>
@@ -73,8 +73,8 @@
                     <img src="assets/starIcon-empty.svg" alt="iconStar">
                     <img src="assets/starIcon-empty.svg" alt="iconStar">
                 </div>
-
             </section>
+
             <section class="adobeEffects">
                 <img class="icon" src="assets/effects.svg" alt="icon">
                 <p class="secondaryDescription">Adobe <br> After Effects</p>
@@ -85,8 +85,8 @@
                     <img src="assets/starIcon-full.svg" alt="iconStar">
                     <img src="assets/starIcon-empty.svg" alt="iconStar">
                 </div>
-
             </section>
+
             <section class="figma">
                 <img class="icon" src="assets/figma.svg" alt="icon">
                 <p class="secondaryDescription">Figma</p>
