--- a/index.html
+++ b/index.html
@@ -107,17 +107,23 @@
             <div class="block">
                 <section class="fashionStore">
                     <img src="assets/fashionStore.jpeg" alt="image">
-                    <p class="description">Online fashion store - <br> Homepage</p>
+                    <p class="description">
+                        <a class="link" target="_blank" href="https://www.asos.com/">Online fashion store - Homepage</a>
+                    </p>
                 </section>
 
                 <section class="reebok">
                     <img src="assets/reebok.jpeg" alt="image">
-                    <p class="description">Reebok Store - Concept</p>
+                    <p class="description">
+                        <a class="link" target="_blank" href="https://www.reebok.in.ua/">Reebok Store - Concept</a>
+                    </p>
                 </section>
 
                 <section class="braun">
                     <img src="assets/braun.jpeg" alt="image">
-                    <p class="description">Braun Landing Page - Concept</p>
+                    <p class="description">
+                        <a class="link" target="_blank" href="https://braun.in.ua/"> Braun Landing Page - Concept</a>
+                    </p>
                 </section>
             </div>
         </div>
@@ -127,6 +133,7 @@
 <footer class="footer container section">
     <h2 class="title">Contacts</h2>
     <p class="description">Want to know more or just chat? <br> You are welcome!</p>
+
     <button class="generalButton">
         <a class="link" target="_blank" href="mailto:vatralanaska@gmail.com">Send message</a>
     </button>
@@ -139,9 +146,10 @@
     </div>
 
     <p class="text">Like me on <br>
-        LinkedIn, Instagram, Behance, Dribble</p>
-
+        LinkedIn, Instagram, Behance, Dribble
+    </p>
 </footer>
 
 </body>
+
 </html>
