--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
 <header>
     <nav class="navigation">
         <ul class="navList">
-            <li class="navItem">Home</li>
-            <li class="navItem">About me</li>
-            <li class="navItem">Skills</li>
-            <li class="navItem">Portfolio</li>
-            <li class="navItem">Contacts</li>
+            <li class="navItem">
+                <a href="/home" target="_blank">Home</a>
+            </li>
+            <li class="navItem">
+                <a href="/aboutMe" target="_blank"> About me</a>
+            </li>
+            <li class="navItem">
+                <a href="/skills" target="_blank">Skills</a>
+            </li>
+            <li class="navItem">
+                <a href="/portfolio" target="_blank">Portfolio</a>
+            </li>
+            <li class="navItem">
+                <a href="/contacts" target="_blank">Contacts</a>
+            </li>
         </ul>
     </nav>
 </header>
