--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+<!--Header-->
+
 <header>
     <nav class="navigation">
         <ul class="navList">
@@ -41,6 +43,8 @@
         <img src="assets/photo.svg" alt="photo">
     </div>
 
+<!--    About me -->
+
     <div class="aboutMe">
         <div class="container section">
             <h2 class="title">About me</h2>
@@ -55,6 +59,8 @@
         </div>
 
     </div>
+
+<!--    Skills-->
 
     <div class="skills container section">
         <h2 class="title">Skills</h2>
@@ -110,6 +116,8 @@
         </div>
     </div>
 
+<!--    Portfolio-->
+
     <div class="portfolio section">
         <div class="container">
             <h2 class="title">Portfolio</h2>
@@ -139,20 +147,29 @@
     </div>
 </main>
 
+<!--Footer-->
+
 <footer class="footer container section">
     <h2 class="title">Contacts</h2>
     <p class="description">Want to know more or just chat? <br> You are welcome!</p>
 
-    <button class="generalButton">
-        <a class="link" target="_blank" href="mailto:vatralanaska@gmail.com">Send message</a>
-    </button>
+    <form>
+        <button class="generalButton">
+            <a class="link" target="_blank" href="mailto:denisNovik@gmail.com">Send message</a>
+        </button>
+    </form>
 
-    <div class="socialGroup">
-        <img src="assets/linkedin.svg" alt="icon">
-        <img src="assets/instagram.svg" alt="icon">
-        <img src="assets/behance.svg" alt="icon">
-        <img src="assets/dribbble.svg" alt="icon">
+    <div>
+        <ul>
+            <li><a href="#"></a></li>
+        </ul>
     </div>
+<!--    <div class="socialGroup">-->
+<!--        <img src="assets/linkedin.svg" alt="icon">-->
+<!--        <img src="assets/instagram.svg" alt="icon">-->
+<!--        <img src="assets/behance.svg" alt="icon">-->
+<!--        <img src="assets/dribbble.svg" alt="icon">-->
+<!--    </div>-->
 
     <p class="text">Like me on <br>
         LinkedIn, Instagram, Behance, Dribble
