--- a/index.html
+++ b/index.html
@@ -5,9 +5,69 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="assets/favicon.png">
+    <title>CSS Dinner Shopping List</title>
 </head>
 <body>
+
+<header class="background-grey">
+    <h1>CSS Dinner Shopping List</h1>
+    <h2>Let’s go to the mall!</h2>
+</header>
+
+
+<main class="section">
+    <form class="wrapper">
+        <div class="block">
+            <input id="pickle" type="checkbox">
+            <label for="pickle">A lot of pickles
+                <span>for the next lessons about CSS</span>
+            </label>
+        </div>
+
+        <div class="block">
+            <input id="apple" type="checkbox">
+            <label for="apple">10 apples
+                <span>for more CSS manipulations</span>
+            </label>
+        </div>
+
+        <div class="block">
+            <input id="orange" type="checkbox">
+            <label for="orange">20 oranges
+                <span>because they are awesome</span>
+            </label>
+        </div>
+
+        <div class="block">
+            <input id="plate" type="checkbox">
+            <label for="plate"> 13 plates
+                <span>hm... they always disappear</span>
+            </label>
+        </div>
+
+        <div class="block">
+            <input id="bento" type="checkbox">
+            <label for="bento">15 bentos</label>
+        </div>
+
+        <div class="block">
+            <input id="sake" type="checkbox">
+            <label for="sake">1 bottle of Sake
+                <span>for my friends</span>
+            </label>
+        </div>
+    </form>
+</main>
+
+
+<footer class="wrapper background-grey">
+    <p>Bon appetit :)</p>
+</footer>
 
 </body>
 </html>
