--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <main class="section">
-    <form class="wrapper">
+    <form action="#" class="wrapper">
         <div class="block">
             <input id="pickle" type="checkbox">
             <label for="pickle">A lot of pickles
@@ -61,6 +61,7 @@
                 <span>for my friends</span>
             </label>
         </div>
+<!--        <button type="button">Bon appetit :)</button>-->
     </form>
 </main>
 
