--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <div class="container section">
             <h2 class="title">About me</h2>
             <div class="introduction">
-                <p class="description">Hi, I'm Denis – UX/UI designer from Minsk. <br>
+                <p class="description">Hi, I'm Denis – UX/UI designer from Minsk.
                     I'm interested in design and everything connected with it.</p>
-                <p class="description">I'm studying at courses "Web and mobile design <br>
+                <p class="description">I'm studying at courses "Web and mobile design
                     interfaces" in IT-Academy.</p>
-                <p class="description">Ready to implement excellent projects <br>
+                <p class="description">Ready to implement excellent projects
                     with wonderful people.</p>
             </div>
         </div>
