--- a/index.html
+++ b/index.html
@@ -5,9 +5,79 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/weather-icons.min.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+
+<main>
+
+    <h1 class="wrapper content">CSS Weather Forecast
+        <i class="wi wi-sunrise"></i>
+    </h1>
+    <div class="content">
+        <ul class="cities">
+            <li>Lisabon
+                <span>21°C
+                    <i class="wi wi-day-sunny"></i>
+                </span>
+            </li>
+            <li>Paris
+                <span>11°C
+                    <i class="wi wi-night-sleet"></i>
+                </span>
+            </li>
+            <li>Belgrade
+                <span>15°C
+                    <i class="wi wi-day-cloudy"></i>
+                </span>
+            </li>
+            <li>Venice
+                <span>21°C
+                    <i class="wi wi-day-cloudy-high"></i>
+                </span>
+            </li>
+            <li>Tel-Avive
+                <span>32°C
+                    <i class="wi wi-hot"></i>
+                </span>
+            </li>
+            <li>Cair
+                <span>21°C
+                    <i class="wi wi-day-sunny"></i>
+                </span>
+            </li>
+            <li>New-York
+                <span>17°C
+                    <i class="wi wi-day-storm-showers"></i>
+                </span>
+            </li>
+            <li>New-Delhi
+                <span>17°C
+                    <i class="wi wi-rain-wind"></i>
+                </span>
+            </li>
+            <li>San-Francisco
+                <span>15°C
+                    <i class="wi wi-day-sunny-overcast"></i>
+                </span>
+            </li>
+            <li>Tokyo
+                <span>8°C
+                    <i class="wi wi-night-clear"></i>
+                </span>
+            </li>
+            <li>Sydney
+                <span>25°C
+                    <i class="wi wi-night-partly-cloudy"></i>
+                </span>
+            </li>
+        </ul>
+    </div>
+    <p class="wrapper content">Have a nice day and don't forget umbrella if you are in New Delhi now!</p>
+
+</main>
 
 </body>
 </html>
