--- a/index.html
+++ b/index.html
@@ -5,9 +5,65 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@700&display=swap"
+          rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <link href="assets/logo.svg" rel="icon">
+    <title>Productly</title>
 </head>
 <body>
+
+<header class="header">
+        <nav class="navigation wrapper">
+            <div class="block block-one">
+                <img src="assets/logo-header.svg" alt="icon">
+            </div>
+
+            <div class="block block-two">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="/product" target="_blank">Product</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/customers" target="_blank">Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/pricing" target="_blank">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/resources" target="_blank">Resources</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="block block-three">
+                <button class="btn sign-in">Sign In</button>
+                <button class="btn sign-up">Sign Up</button>
+            </div>
+        </nav>
+</header>
+
+<main>
+
+    <section class="first-screen wrapper">
+        <div class="left content">
+            <h1>The Design Thinking <br/> superpowers</h1>
+            <p>Tools, tutorials, design and innovation experts, all in one <br/> place! The most intuitive way to imagine your
+                next user <br/> experience.</p>
+            <button class="general-button">Get started</button>
+        </div>
+
+        <div class="right content">
+            <img src="assets/first-screen-image.svg" alt="image">
+        </div>
+    </section>
+
+</main>
+
+
+<footer></footer>
 
 </body>
 </html>
