--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/weather-icons.min.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link href="assets/weather.svg" rel="icon">
+    <title>Weather Forecast</title>
 </head>
 <body>
 
