--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 <body>
 
 <header class="header">
-        <nav class="navigation wrapper">
-            <div class="block block-one">
-                <img src="assets/logo-header.svg" alt="icon">
-            </div>
+    <nav class="navigation wrapper">
+        <div class="block block-one">
+            <img src="assets/logo-header.svg" alt="icon">
+        </div>
 
-            <div class="block block-two">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="/product" target="_blank">Product</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/customers" target="_blank">Customers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/pricing" target="_blank">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/resources" target="_blank">Resources</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="block block-two">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="/product" target="_blank">Product</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/customers" target="_blank">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/pricing" target="_blank">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/resources" target="_blank">Resources</a>
+                </li>
+            </ul>
+        </div>
 
-            <div class="block block-three">
-                <button class="btn sign-in">Sign In</button>
-                <button class="btn sign-up">Sign Up</button>
-            </div>
-        </nav>
+        <div class="block block-three">
+            <button class="btn sign-in">Sign In</button>
+            <button class="btn sign-up">Sign Up</button>
+        </div>
+    </nav>
 </header>
 
 <main>
@@ -50,7 +50,8 @@
     <section class="first-screen wrapper">
         <div class="left content">
             <h1>The Design Thinking <br/> superpowers</h1>
-            <p>Tools, tutorials, design and innovation experts, all in one <br/> place! The most intuitive way to imagine your
+            <p>Tools, tutorials, design and innovation experts, all in one <br/> place! The most intuitive way to
+                imagine your
                 next user <br/> experience.</p>
             <button class="general-button">Get started</button>
         </div>
@@ -60,10 +61,100 @@
         </div>
     </section>
 
+
+    <section class="product-managers wrapper">
+        <div class="left-content">
+            <img src="assets/project-manager-image.svg" alt="image">
+        </div>
+        <div class="right-content">
+            <p>Easier decision making for</p>
+            <h2>Product Managers</h2>
+            <p class="description">The Myspace page defines the individual, his or her characteristics, traits, personal
+                choices and the
+                overall personality of the person. </p>
+
+            <ul class="checkbox">
+                <li>
+                    <label for="one">
+                        <input id="one" type="checkbox">
+                        Never worry about overpaying for your energy bill again.
+                    </label>
+                </li>
+
+                <li>
+                    <label for="two">
+                        <input id="two" type="checkbox">
+                        We will only switch you to energy companies that we trust and will treat you right.
+
+                    </label>
+                </li>
+
+                <li>
+                    <label for="three">
+                        <input id="three" type="checkbox">
+                        We track the markets daily and know where the savings are.
+                    </label>
+                </li>
+            </ul>
+        </div>
+    </section>
+
 </main>
 
 
-<footer></footer>
+<footer class="border">
+    <div class="footer wrapper">
+        <div class="icon-logo">
+            <img src="assets/logo-header.svg" alt="icon">
+        </div>
+
+        <div class="quick-links">
+            <h3>Quick Links</h3>
+            <ul class="footer-ul">
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="legal-stuff">
+            <h3>Legal Stuff</h3>
+            <ul class="footer-ul">
+                <li>
+                    <a href="#">Disclaimer</a>
+                </li>
+                <li>
+                    <a href="#">Financing</a>
+                </li>
+                <li>
+                    <a href="#">Privacy Policy</a>
+                </li>
+                <li>
+                    <a href="#">Terms of Service</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="form-footer">
+            <h3>Knowing you're always on the best energy deal.
+            </h3>
+
+            <form action="#" target="_blank">
+                <input class="input-number" type="text" placeholder="Enter your phone Number">
+                <button class="general-button">Sign up Now</button>
+            </form>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
