--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p class="author">Jezael Melgoza</p>
                     <p class="publishDate">5 June 2020</p>
                 </div>
-                <img src="assets/architect-1.svg" alt="Image 1">
+                <img class="linear" src="assets/architect-1.svg" alt="Image 1">
             </div>
 
             <div class="item">
