--- a/index.html
+++ b/index.html
@@ -15,86 +15,117 @@
 <body>
 
 <!--HEADER-->
-<header>
-    <nav class="navigation wrapper">
+<header class="header wrapper">
+    <nav class="navigation">
         <ul class="nav-list">
             <li class="language">ENG</li>
             <li class="nav-item"><a href="#" target="_blank">Documentation</a></li>
             <li class="nav-item slash">/</li>
-            <li class="nav-item"><a href="#" target="_blank">Who's using</a></li>
+            <li class="nav-item"><a href="use.html">Who's using</a></li>
         </ul>
         <img src="assets/company-logo-black.svg" alt="logo">
-
     </nav>
 </header>
 
 <!--MAIN-->
-<main class="wrapper">
+<main>
+    <div class="content wrapper">
+        <div class="left-content">
+            <h2 class="title border-bottom"><a href="#introduction">Introduction</a></h2>
+            <h2 class="title border-bottom"><a href="#core">core components</a></h2>
+            <h2 class="title border-bottom"><a href="#react">react fundamentals</a></h2>
+            <h2 class="title border-bottom"><a href="#handling">handling text input</a></h2>
+        </div>
+        <div class="right-content">
+            <section class="introduction section">
+                <hr class="divider">
+                <a id="introduction"><h2 class="title">Introduction <span class="chapter">Chapter 1</span></h2></a>
+                <p class="description">Welcome to the very start of your React Native journey! If you're looking for
+                    environment
+                    setup instructions, they've moved to
+                    <span class="underline"><a href="#react">their own section.</a></span>
+                    Continue reading for an introduction to the documentation, Native Components, React, and more!</p>
+            </section>
 
-    <section class="introduction section">
-        <h2 class="title">Introduction <span class="chapter">Chapter 1</span></h2>
-        <p class="description">Welcome to the very start of your React Native journey! If you're looking for environment
-            setup instructions, they've moved to
-            <span class="underline"><a href="#react">their own section.</a> </span>
-            Continue reading for an introduction to the documentation, Native Components, React, and more!</p>
-    </section>
+            <section class="core-components section">
+                <hr class="divider">
+                <a id="core"><h2 class="title">core components <span class="chapter">Chapter 2</span></h2></a>
+                <p class="description">React Native is an open source framework for building Android and iOS
+                    applications
+                    using
+                    React and the app platform’s native capabiles. With React Native, you use JavaScript to access your
+                    platform’s APIs as well as to describe the appearance and behavior of your UI using React
+                    components:
+                    <span class="italic">bundles of reusable, nestable code.</span> You can learn more about React in
+                    the
+                    next
+                    section. But first, let’s
+                    cover how components work in React Native.</p>
+            </section>
 
-    <section class="core-components section">
-        <h2 class="title">core components <span class="chapter">Chapter 2</span></h2>
-        <p class="description">React Native is an open source framework for building Android and iOS applications using
-            React and the app platform’s native capabiles. With React Native, you use JavaScript to access your
-            platform’s APIs as well as to describe the appearance and behavior of your UI using React components:
-            <span class="italic">bundles of reusable, nestable code.</span> You can learn more about React in the next
-            section. But first, let’s
-            cover how components work in React Native.</p>
-    </section>
+            <section class="react-fundamentals section">
+                <hr class="divider">
+                <a id="react"><h2 class="title">react fundamentals <span class="chapter">Chapter 3</span></h2></a>
+                <p class="description">React Native runs on
+                    <span class="underline"><a href="https://uk.reactjs.org/" target="_blank">React</a></span>,
+                    a popular open source library for building user interfaces with JavaScript. To make the most of
+                    React Native, it helps to understand React itself. This section can get you started or can
+                    serve as a refresher course.
+                </p>
 
-    <section class="react-fundamentals section">
-        <a id="react"><h2 class="title">react fundamentals <span class="chapter">Chapter 3</span></h2></a>
-        <p class="description">React Native runs on
-            <span class="underline"><a href="https://uk.reactjs.org/" target="_blank">React</a></span>,
-            a popular open source library for building user interfaces with JavaScript. To make the most of
-            React Native, it helps to understand React itself. This section can get you started or can
-            serve as a refresher course.
-        </p>
+                <p class="description">We’re going to cover the core concepts behind React:</p>
 
-        <p class="description">We’re going to cover the core concepts behind React:</p>
+                <p class="description"><span class="bold">+ components.</span> The rest of this introduction to React
+                    uses
+                    cats
+                    in its examples: friendly, approachable creatures that need names and a cafe to work in.</p>
 
-        <p class="description"><span class="bold">+ components.</span> The rest of this introduction to React uses cats
-            in its examples: friendly, approachable creatures that need names and a cafe to work in.</p>
+                <p class="description"><span class="bold">+ JSX.</span> React and React Native use JSX, a syntax that
+                    lets
+                    you
+                    write elements inside
+                    JavaScript like so: <span
+                            class="background">&#60;Text&#62;Hello, I am your cat!&#60;/Text&#62;</span>
+                </p>
 
-        <p class="description"><span class="bold">+ JSX.</span> React and React Native use JSX, a syntax that lets you
-            write elements inside
-            JavaScript like so: <span class="background">&#60;Text&#62;Hello, I am your cat!&#60;/Text&#62;</span>
-        </p>
+                <p class="description">The React docs have
+                    <span class="underline"><a href="https://uk.reactjs.org/docs/introducing-jsx.html" target="_blank">a comprehensive guide to JSX</a></span>
+                    you can refer to learn even more. Because JSX is JavaScript, you can use variables inside it. Here
+                    you
+                    are
+                    declaring a
+                    <span class="background">name</span> for the cat, name, and embedding it with curly braces inside
+                    <span class="background">&#60;Text&#62;</span>
+                </p>
 
-        <p class="description">The React docs have
-            <span class="underline"><a href="https://uk.reactjs.org/docs/introducing-jsx.html" target="_blank">a comprehensive guide to JSX</a></span>
-            you can refer to learn even more. Because JSX is JavaScript, you can use variables inside it. Here you are
-            declaring a
-            <span class="background">name</span> for the cat, name, and embedding it with curly braces inside
-            <span class="background">&#60;Text&#62;</span>
-        </p>
+                <p class="description"><span class="bold">+ props.</span> Props is short for “properties”. .</p>
 
-        <p class="description"><span class="bold">+ props.</span> Props is short for “properties”. .</p>
-
-        <p class="description"><span class="bold">+ state.</span> While you can think of props as
-            arguments you use to configure how components render, state is like a component’s personal data storage.
-            State is useful for handling data that changes over time or that comes from user interaction. State gives
-            your components memory!</p>
-    </section>
+                <p class="description"><span class="bold">+ state.</span> While you can think of props as
+                    arguments you use to configure how components render, state is like a component’s personal data
+                    storage.
+                    State is useful for handling data that changes over time or that comes from user interaction. State
+                    gives
+                    your components memory!</p>
+            </section>
 
 
-    <section class="handling-text-input section">
-        <h2 class="title">handling text input <span class="chapter">Chapter 4</span></h2>
-        <p class="description">TextInput is a Core Component that allows the user to enter text. It has an
-            <span class="italic">onChangeText</span>
-            prop that takes a function to be called every time the text changed, and an onSubmitEditing prop that takes
-            a function to be called when the text is submitted.</p>
-        <p class="description">For example, let's say that as the user types, you're translating their words into a
-            different language. In this new language, every single word is written the same way: 🍕. So the sentence
-            "Hello there Bob" would be translated as "🍕 🍕".</p>
-    </section>
+            <section class="handling-text-input section">
+                <hr class="divider">
+                <a id="handling"><h2 class="title">handling text input <span class="chapter">Chapter 4</span></h2></a>
+                <p class="description">TextInput is a Core Component that allows the user to enter text. It has an
+                    <span class="italic">onChangeText</span>
+                    prop that takes a function to be called every time the text changed, and an onSubmitEditing prop
+                    that
+                    takes
+                    a function to be called when the text is submitted.</p>
+                <p class="description">For example, let's say that as the user types, you're translating their words
+                    into a
+                    different language. In this new language, every single word is written the same way: 🍕. So the
+                    sentence
+                    "Hello there Bob" would be translated as "🍕 🍕".</p>
+            </section>
+        </div>
+    </div>
 </main>
 
 </body>
