--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!--HEADER-->
 <header class="header wrapper">
-    <nav class="navigation">
+    <nav class="navigation wrapper">
         <ul class="nav-list">
             <li class="language">ENG</li>
             <li class="nav-item"><a href="#" target="_blank">Documentation</a></li>
