--- a/use.html
+++ b/use.html
@@ -29,7 +29,7 @@
 </header>
 
 <main class="wrapper">
-    <div class="content wrapper">
+    <div class="content">
         <span class="line"></span>
         <h2 class="title">Who’s using</h2>
     </div>
