--- a/index.html
+++ b/index.html
@@ -5,9 +5,77 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@400;500&display=swap"
+          rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <link href="assets/icon-form.png" rel="icon">
+    <title>Web-Forms</title>
 </head>
-<body>
+<body class="form-center">
 
+<form class="form wrapper" action="#">
+
+    <h2 class="title">Create an Account</h2>
+
+    <div class="block-half">
+        <label class="label" for="first-name">First Name
+            <input id="first-name" type="text">
+        </label>
+
+        <label class="label" for="last-name">Last Name
+            <input id="last-name" type="text">
+        </label>
+    </div>
+
+    <label class="label" for="email">E-mail
+        <input id="email" type="email" required>
+        <p class="description">We'll never share your email with anyone else.</p>
+    </label>
+
+    <div class="block">
+        <div class="gender">
+
+            <label class="label" for="male">
+                <input id="male" type="radio" value="male" name="gender" checked>
+                Male
+            </label>
+
+            <label class="label" for="female">
+                <input id="female" type="radio" value="female" name="gender">
+                Female
+            </label>
+
+        </div>
+
+        <div class="block-half">
+            <label class="label" for="country">Country
+                <select id="country" class="select">
+                    <option value="" disabled selected>Select</option>
+                    <option value="Ukraine">Ukraine</option>
+                    <option value="USA">USA</option>
+                    <option value="Poland">Poland</option>
+                    <option value="Great Britain">Great Britain</option>
+                    <option value="France">France</option>
+                    <option value="Germany">Germany</option>
+                </select>
+            </label>
+
+            <label class="label" for="city">City
+                <input id="city" type="text" required>
+            </label>
+        </div>
+
+        <button class="btn" type="submit">Sign Up</button>
+
+        <p class="description center">By clicking the 'Sign Up' button, you confirm that you accept our <br>
+            <span class="color">Terms of Use</span> and
+            <span class="color">Privacy Policy</span>
+        </p>
+        <hr>
+        <p class="center">Have an account? <span class="color">Log In</span></p>
+
+</form>
 </body>
 </html>
