--- a/form-one.html
+++ b/form-one.html
@@ -25,9 +25,9 @@
                 </ul>
             </li>
         </ul>
-
     </nav>
 </header>
+
 <main class="form-center">
 
 
@@ -96,14 +96,14 @@
         <button class="btn" type="submit">Sign Up</button>
 
         <p class="description center">By clicking the 'Sign Up' button, you confirm that you accept our <br>
-            <span class="color">Terms of Use</span> and
-            <span class="color">Privacy Policy</span>
+            <span class="color"><a href="#">Terms of Use</a></span> and
+            <span class="color"><a href="#">Privacy Policy</a></span>
         </p>
         <span class="line"></span>
 
         <div class="block">
             <p class="center">Have an account?</p>
-            <p class="color">Log In</p>
+            <p class="color"><a href="#">Log In</a></p>
         </div>
 
     </form>
