--- a/form-two.html
+++ b/form-two.html
@@ -26,8 +26,8 @@
                 </ul>
             </li>
         </ul>
-
     </nav>
+
 </header>
 
 <main class="form-center">
@@ -47,7 +47,7 @@
             <span class="description">Up to 1 MB (300x300 px)</span>
             <label class="trash">
                 <button class="reset" type="reset"></button>
-                <img src="assets/form-trash.svg">
+                <img src="assets/form-trash.svg" alt="trash">
             </label>
         </div>
 
