--- a/form-one.html
+++ b/form-one.html
@@ -95,7 +95,7 @@
 
         <button class="btn" type="submit">Sign Up</button>
 
-        <p class="description center">By clicking the 'Sign Up' button, you confirm that you accept our <br>
+        <p class="description center margin">By clicking the 'Sign Up' button, you confirm that you accept our <br>
             <span class="color"><a href="#">Terms of Use</a></span> and
             <span class="color"><a href="#">Privacy Policy</a></span>
         </p>
