--- a/form-two.html
+++ b/form-two.html
@@ -31,7 +31,7 @@
 </header>
 
 <main class="form-center">
-    <form class="form wrapper" action="#">
+    <form class="form form-two wrapper" action="#">
 
         <h2 class="title">Profile</h2>
 
