--- a/index.html
+++ b/index.html
@@ -5,10 +5,83 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@400;500&family=Roboto:wght@900&display=swap"
+          rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="assets/icon-front-end.png" rel="icon">
+    <title>Our team</title>
 </head>
 <body>
+
+<header class="header wrapper">
+    <p class="sub-text">The geniuses behind our work</p>
+    <h1 class="title">Our team</h1>
+    <div class="bonfire">
+        <img src="assets/bonfire-sharp-icon.svg" alt="icon">
+    </div>
+</header>
+
+<main class="content wrapper">
+    <div class="left-content">
+        <img src="assets/image.png" alt="image">
+    </div>
+
+    <hr class="divider">
+
+    <div class="right-content">
+        <h2 class="name">Sahariar Kabir</h2>
+        <hr class="line">
+        <h3 class="position">Frontend Developer</h3>
+
+        <ul class="social-media">
+            <li class="social-list">
+                <a href="#">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="15" cy="15" r="14" fill="" stroke="#CCCCCC" stroke-width="2"/>
+                        <path d="M18.0059 15.75L18.3391 13.5783H16.2553V12.169C16.2553 11.5748 16.5464 10.9957 17.4797 10.9957H18.427V9.14672C18.427 9.14672 17.5673 9 16.7454 9C15.0293 9 13.9076 10.0402 13.9076 11.9231V13.5783H12V15.75H13.9076V21H16.2553V15.75H18.0059Z"
+                              fill="#CCCCCC"/>
+                    </svg>
+
+                </a>
+            </li>
+
+            <li class="social-list">
+                <a class="social-item" href="#">
+                    <img class="item" src="assets/twitter.svg" alt="icon">
+                </a>
+            </li>
+
+            <li class="social-list">
+                <a class="social-item" href="#">
+                    <img src="assets/google.svg" alt="icon">
+                </a>
+            </li>
+
+            <li class="social-list">
+                <a class="social-item" href="#">
+                    <img src="assets/linkedin.svg" alt="icon">
+                </a>
+            </li>
+        </ul>
+
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula
+            efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat.
+            Praesent rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p>
+
+        <div class="decor-rectangle">
+            <hr class="mini-rectangle">
+            <hr class="big-rectangle">
+            <hr class="mini-rectangle">
+        </div>
+
+        <a href="#">
+            <button class="btn">view profile</button>
+        </a>
+
+    </div>
+</main>
 
 </body>
 </html>
