--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <header class="header wrapper">
-    <p class="sub-text">The geniuses behind our work</p>
+    <p class="header__sub-text">The geniuses behind our work</p>
     <h1 class="title">Our team</h1>
     <div class="bonfire">
         <img src="assets/bonfire-sharp-icon.svg" alt="icon">
@@ -25,7 +25,11 @@
 
 <main class="content wrapper">
     <div class="left-content">
-        <img src="assets/image.png" alt="image">
+        <img src="assets/photo-worker.png" alt="image">
+        <div class="square-left-top"></div>
+        <div class="square-left-bottom"></div>
+        <div class="square-right-top"></div>
+        <div class="square-right-bottom"></div>
     </div>
 
     <hr class="divider">
