--- a/index.html
+++ b/index.html
@@ -5,10 +5,49 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Source+Sans+Pro&display=swap"
+          rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Patagonia</title>
 </head>
 <body>
+
+<header class="header wrapper">
+    <ul class="list">
+        <li class="item">
+            <a href="#">
+                Works
+            </a>
+        </li>
+        <li class="item">
+            <a href="#">
+                Services
+            </a>
+        </li>
+        <li class="item">
+            <a href="#">
+                Contacts
+            </a>
+        </li>
+    </ul>
+    <img class="sm-screen" src="assets/Icon.svg" alt="">
+</header>
+
+<main class="main wrapper">
+
+    <h1 class="title">Patagonia</h1>
+
+    <p class="description">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec.
+        Donec viverra eleifend lacus,
+        vitae ullamcor.</p>
+
+    <div class="background">
+
+    </div>
+
+</main>
 
 </body>
 </html>
